MD downloads: support showing status text after a download has finished.

This fixes "Removed" not appearing if you click a download after
deleting its file from disk.

Bug: 802232
Change-Id: Ia131bda2ef5968eaeb40005132dada4fe070ed58
Reviewed-on: https://chromium-review.googlesource.com/883727
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531648}
Former-commit-id: 94cbed133d895c7259a798c871549e7a8539fade